--- a/src/index.css
+++ b/src/index.css
@@ -1,35 +1,35 @@
-///**
-// * ▪  ·▄▄▄▄• ▄▄▄·  ▐ ▄  ▄▄▄·  ▄▄ • ▪   ▄▄· ▄▄▄   ▄▄▄· ·▄▄▄▄▄▄▄▄
-// * ██ ▪▀·.█▌▐█ ▀█ •█▌▐█▐█ ▀█ ▐█ ▀ ▪██ ▐█ ▌▪▀▄ █·▐█ ▀█ ▐▄▄·•██
-// * ▐█·▄█▀▀▀•▄█▀▀█ ▐█▐▐▌▄█▀▀█ ▄█ ▀█▄▐█·██ ▄▄▐▀▀▄ ▄█▀▀█ ██▪  ▐█.▪
-// * ▐█▌█▌▪▄█▀▐█ ▪▐▌██▐█▌▐█ ▪▐▌▐█▄▪▐█▐█▌▐███▌▐█•█▌▐█ ▪▐▌██▌. ▐█▌·
-// * ▀▀▀·▀▀▀ • ▀  ▀ ▀▀ █▪ ▀  ▀ ·▀▀▀▀ ▀▀▀·▀▀▀ .▀  ▀ ▀  ▀ ▀▀▀  ▀▀▀
-// *
-// *
-// *    @@@@@
-// *    @@* *@@
-// *      @@@  @@@
-// *         @@@  @@ @@@       @@@@@@@@@@@
-// *           @@@@@@@@   @@@@@@@@@@@@@@@@@@@@@
-// *            @@@    @@@@@@@@@@@@@@@@@@@@@@@@@@@
-// *                 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
-// *                @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
-// *                @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
-// *               #@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
-// *               #@@@   @@                 @@  @@@@  @@@@
-// *                @@@@      @@@      @@@@      @@@@   @@@
-// *                @@@@@@                     @@@@@@    @@
-// *                 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
-// *                  @@@@@@@@@@@@@@@@@@@@@@@@@@@@@
-// *                   @@@@@@@@@@@@@@@@@@@@@@@@@@@
-// *                     @@@@@@@@@@@@@@@@@@@@@@@
-// *                       @@@@@@@@@@@@@@@@@@@
-// *                           @@@@@@@@@@@
-// *
-// * Copyright (c) 2023 - present | sanguine6660 <sanguine6660@gmail.com>
-// * Copyright (c) 2023 - present | izanagicraft.com <contact@izanagicraft.com>
-// * Copyright (c) 2023 - present | izanagicraft.com team and contributors
-// */
+/**
+ * ▪  ·▄▄▄▄• ▄▄▄·  ▐ ▄  ▄▄▄·  ▄▄ • ▪   ▄▄· ▄▄▄   ▄▄▄· ·▄▄▄▄▄▄▄▄
+ * ██ ▪▀·.█▌▐█ ▀█ •█▌▐█▐█ ▀█ ▐█ ▀ ▪██ ▐█ ▌▪▀▄ █·▐█ ▀█ ▐▄▄·•██
+ * ▐█·▄█▀▀▀•▄█▀▀█ ▐█▐▐▌▄█▀▀█ ▄█ ▀█▄▐█·██ ▄▄▐▀▀▄ ▄█▀▀█ ██▪  ▐█.▪
+ * ▐█▌█▌▪▄█▀▐█ ▪▐▌██▐█▌▐█ ▪▐▌▐█▄▪▐█▐█▌▐███▌▐█•█▌▐█ ▪▐▌██▌. ▐█▌·
+ * ▀▀▀·▀▀▀ • ▀  ▀ ▀▀ █▪ ▀  ▀ ·▀▀▀▀ ▀▀▀·▀▀▀ .▀  ▀ ▀  ▀ ▀▀▀  ▀▀▀
+ *
+ *
+ *    @@@@@
+ *    @@* *@@
+ *      @@@  @@@
+ *         @@@  @@ @@@       @@@@@@@@@@@
+ *           @@@@@@@@   @@@@@@@@@@@@@@@@@@@@@
+ *            @@@    @@@@@@@@@@@@@@@@@@@@@@@@@@@
+ *                 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+ *                @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+ *                @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+ *               #@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+ *               #@@@   @@                 @@  @@@@  @@@@
+ *                @@@@      @@@      @@@@      @@@@   @@@
+ *                @@@@@@                     @@@@@@    @@
+ *                 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+ *                  @@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+ *                   @@@@@@@@@@@@@@@@@@@@@@@@@@@
+ *                     @@@@@@@@@@@@@@@@@@@@@@@
+ *                       @@@@@@@@@@@@@@@@@@@
+ *                           @@@@@@@@@@@
+ *
+ * Copyright (c) 2023 - present | sanguine6660 <sanguine6660@gmail.com>
+ * Copyright (c) 2023 - present | izanagicraft.com <contact@izanagicraft.com>
+ * Copyright (c) 2023 - present | izanagicraft.com team and contributors
+ */
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap'); /*font-family: 'Inter', sans-serif;*/
 
